--- a/public_html/storyboard.html
+++ b/public_html/storyboard.html
@@ -34,7 +34,7 @@
 					<div style="display: table-cell; vertical-align: middle;">
 						<h2 class="introBullet"> <ul>
 				 <li> Please click through tabs from 1 to 10 to view phone processing steps</li>
-				 <li> Next, please <a class="click" href="storyboard.html">CLICK HERE </a>to explore the full size verison </li>
+				 <li> Next, please <a class="click" href="S2Sstoryboard.html">CLICK HERE </a>to explore the full size verison </li>
 			 </ul> </h2>
 
 					</div>
@@ -242,6 +242,32 @@
 							case 50:
 								activaTab('items-arrive');
 								break;
+								case 51:
+									activaTab('start-processing');
+									break;
+									case 52:
+										activaTab('locked-unknown-loop');
+										break;
+										case 53:
+											activaTab('functional-test');
+											break;
+											case 54:
+												activaTab('data-erasure');
+												break;
+												case 55:
+													activaTab('value-estimate');
+													break;
+													case 56:
+														activaTab('blind-bidding');
+														break;
+														case 57:
+															activaTab('sold');
+															break;
+															case 48:
+																activaTab('sale-complete');
+																break;
+
+
 						}
 					}
 					document.addEventListener('keydown', onKeyDown, false);
